app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 224 71.4% 4.1%;

    --card: 0 0% 100%;
    --card-foreground: 224 71.4% 4.1%;

    --primary: 220.9 39.3% 11%;
    --primary-foreground: 210 20% 98%;

    --secondary: 220 14.3% 95.9%;
    --secondary-foreground: 220.9 39.3% 11%;

    --muted: 220 14.3% 95.9%;
    --muted-foreground: 220 8.9% 46.1%;

    --accent: 30 53% 60%;

    /* --border: 220 13% 91%; */
    --input: 220 13% 91%;
    --ring: 224 71.4% 4.1%;

    --radius: 0.375rem;
  }

  .dark {
    --background: 240 10% 4%;
    --foreground: 0 0% 100%;

    --card: 240 5% 93%;
    --card-foreground: 0 0% 0%;

    --primary: 0 0% 100%;
    --primary-foreground: 0 0% 0%;

    --secondary: 215 27.9% 16.9%;
    --secondary-foreground: 210 20% 98%;

    --muted: 0 0% 85%;
    --muted-foreground: 0 0% 100%;

    --accent: 30 53% 60%;

    /* --border: 215 27.9% 16.9%; */
    /* --input: 215 27.9% 16.9%; */
    --ring: 216 12.2% 83.9%;
  }
}

@layer base {
  /* * { */
  /*   @apply border-border; */
  /* } */
  body {
    @apply bg-background text-foreground;
  }
  .text-stroke {
    color: #0f0f0f;
    text-shadow:
      -1px -1px 0 rgba(255, 255, 255, 0.6),
      1px -1px 0 rgba(255, 255, 255, 0.6),
      -1px 1px 0 rgba(255, 255, 255, 0.6),
      1px 1px 0 rgba(255, 255, 255, 0.6);
  }

  .button-hover {
    position: relative;
  }

  .button-hover::before {
    position: absolute;
    top: 0;
    height: 100%;
    content: "";
    background: hsl(var(--primary));
    width: 130%;
    left: -15%;
    transform: skew(30deg);
    transition: transform 0.45s cubic-bezier(0.3, 1, 0.8, 1);
  }
  .button-hover:hover::before {
    transform: translate3d(100%, 0, 0);
  }
}

